# ChangeLog for dev-ruby/rubygems-ee
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  Import changes from mainline tree, fix several issues

  30 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  Version bump
   * Remove old patches as they are no longer needed

  10 Dec 2008; Alex Legler <gentoo@a3li.info>
  +files/rubygems-ee-1.3.1-gentoo.patch,
  +files/rubygems-ee-1.3.1-proxy.patch, +files/10rubygems,
  +files/rubygems-ee-1.3.1-setup.patch, +files/auto_gem.rb,
  +files/conf.d-gem_server, +files/init.d-gem_server2,
  +rubygems-ee-1.3.1.ebuild:
  Initial ebuild, taken from the original rubygems, changes by a3li
