@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 10rubygems 21 RMD160 02441be7de6307bbb859fbc2bf5891809fe9ecf8 SHA1 3f98150bfb39a3f3f1dfabcf2d9bf80051960d81 SHA256 8c30de9ba7f327237af47f85d8f7f6701d34c9a8780ff7303244667568ca5833
 AUX auto_gem.rb 159 RMD160 fbf261e5cf0a8450c51c33a7ad4dafbab21bd518 SHA1 8dde3d73f65998f4c5552924ad49e1441e1b211d SHA256 fe1efe24cd0ba36c55449e9623cd0be394980f37d12468624dad7ffdef72f4dc
 AUX conf.d-gem_server 81 RMD160 8c5c57e989e009b87fcb345185f3f1e3acaf517d SHA1 4d43d760253a478adbce597148ff1c4e414e8eea SHA256 aa850780bebe0e31da9732d8707a748567ca72716fd91e294dc712e71f82db2f
@@ -9,6 +12,14 @@ AUX rubygems-ee-1.3.4-gentoo.patch 1422 RMD160 e39a2042170399d0e98c772b0572026d6
 AUX rubygems-ee-1.3.4-setup.patch 886 RMD160 fa4610c20574a42f2703748359dd0bf50b83892e SHA1 54fcc6dc9dd4435a1d043fdf8f10e1d0756722fe SHA256 5220a63f1c8a231a0f8d7dfa938ef4351764a76aa82cf941fdd9dd6b83c7b6bf
 DIST rubygems-1.3.1.tgz 263748 RMD160 898f33bf49ac6d29d8980cb4feaf30ade0125248 SHA1 a21ae466146bffb28ece05cddbdced0b908ca74f SHA256 361f02e9e3bf1b6625f0e2146553b12c3003d36336cacba51410740f544a8d3b
 DIST rubygems-1.3.4.tgz 293275 RMD160 451797299921cac9997fc93a85601d6f28f17cf5 SHA1 b973b4748c0bc08f9a62b3312bde935dda2eac6f SHA256 1eb4b0a24ed589c40c2b2c3583bd39c52e841afedd55958cc191b3e31adfbbfc
-EBUILD rubygems-ee-1.3.1.ebuild 2883 RMD160 e1dd902a98f60fefa50f54741dd5ec63afac5e44 SHA1 d0fa84554adad876f235407c4f4e49b83e5fa82e SHA256 254a3764382ac6e11663aa1a7cc20d61dacf8b7bdaab5f7ef57d0b1cdfe7fe18
-EBUILD rubygems-ee-1.3.4.ebuild 2873 RMD160 1a2ef2eae43df9648051bc361cb14fda73a6ddfd SHA1 a2756242e31b3c329a10fca9eef8184d076fcc03 SHA256 8319b872e34d62925b80c3253b585a178a247ab3f3b300bf8a091cf137bcbb57
-MISC ChangeLog 734 RMD160 bf0d2300e1be1d8b7fd07feb0c9bdebc1ce7f4b1 SHA1 239fd742c6e2fe87fd28b0287b055ed8784477be SHA256 a5f05df5f4400aff6036fbd81bcb73bd3875ea179761d0a64c9fbbe50603acd3
+EBUILD rubygems-ee-1.3.1.ebuild 2849 RMD160 95a58c701c445fddfb2a0a76b988df2c348befc1 SHA1 e945ee8aa58397315028d7ba9476804adf4f4ad3 SHA256 e3b3327232a354a4900ef87fd1f4258f6d6902d33f742a1be246833e913a6c8d
+EBUILD rubygems-ee-1.3.4.ebuild 2839 RMD160 cf2e2cc8a05bb9a07180f4c32e771ea236ac0c1d SHA1 04566686c8241eef365548c41c79399f293b8ecd SHA256 87d8bfcfe86ca63906b05db3b425a68e685892715434c423e8b095b8ab2f6ecf
+MISC ChangeLog 868 RMD160 64fe41d4416fed200e12e507d14153d3cef77667 SHA1 21edd9de213295b693c896ebba979aa4dcd56a7c SHA256 98b140555e71aad0f47fedcb6ff7b69a4d2850a8bb5932f40395bf556a4f3a5f
+MISC metadata.xml 363 RMD160 7bd954b673e07716c7f012d8f34b13045fd44f41 SHA1 4ba642804deeb0aa3691c9433e52f38416356b38 SHA256 0082444964a2529e944de1dd6964204d22c13deb8bd4abbeb9f416b6c8f4d3c4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlD8hQW+hXSf0t0IRAg9TAJ99I9E47tsFvHj1C4hT+zWqasczOACgji8a
+B26R9vf1soEr6378yCkxyuY=
+=khqB
+-----END PGP SIGNATURE-----
