@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+  	<herd>ruby</herd>
+    <maintainer>
+        <email>ramereth@gentoo.org</email>
+        <name>Lance Albertson</name>
+    </maintainer>
+  	<use>
+		<flag name='server'>Install support for the rubygems server</flag>
+  	</use>
+</pkgmetadata>
