@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2009; Lance Albertson <ramereth@gentoo.org>
+  rubygems-ee-1.3.1.ebuild, rubygems-ee-1.3.4.ebuild, +metadata.xml:
+  QA Fixes
+
   30 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
   Import changes from mainline tree, fix several issues
 
